<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lawsh.personalbest.MainActivity">
    <item
        android:id="@+id/action_progress"
        android:orderInCategory="100"
        android:title="Progress Report"
        app:showAsAction="always" />
</menu>
